# Robot-Mobile-Base-with-Arm

./: .gitignore  .gitmodules  Dockerfile.ros.melodic  Dockerfile.ros.noetic  README.md  setup.sh
src/: .rosinstall  .rosinstall.bak
src/ESP32_control/: package.xml  platformio.ini  setup.cfg  setup.py  test_cmd_vel.txt
src/ESP32_control/ESP32_control/: ros2_mqtt.py  ros2_serial.py
src/ESP32_control/MQTT_ROS2_C/: CMakeLists.txt
src/ESP32_control/SERIAL_ROS2_C/: CMakeLists.txt
src/ESP32_control/include/: DRV8833_MCPWM.h  I2Cbus.hpp  MPU9250.h  drive.h
src/ESP32_control/src/: DRV8833_MCPWM.cpp  drive.cpp  main.cpp
src/cartographer_files/: mobile_base_arm.lua  mobile_base_arm_slam.launch
src/gscam/: CMakeLists.txt
src/gscam/examples/: jetson_csi.launch  jetson_stereo.launch  rpi_left.yaml  rpi_right.yaml
src/jetson_launch/: CMakeLists.txt  package.xml
src/jetson_launch/launch/: dockerlaunch.py  launch.py  launch_cartographer.py  launch_nav2.py  rtabmap.launch.py  ydlidar.launch.py
src/jetson_launch/src/: subscribe_initialpose.cpp
src/mobile_base_arm/: CMakeLists.txt  package.xml
src/mobile_base_arm/config/: joint_names_mobile_base_arm.yaml
src/mobile_base_arm/launch/: display.launch  display.launch.py  gazebo.launch
src/mobile_base_arm/meshes/: MPU6050_bl.STL  MPU6050_br.STL  MPU6050_fl.STL  MPU6050_fr.STL  MPU9250_bl.STL  MPU9250_br.STL  MPU9250_fl.STL  MPU9250_fr.STL  base_link.STL  camera_bottom_screw_frame.STL  camera_link.STL  eef_finger_link_1.STL  eef_finger_link_2.STL  eef_link_1.STL  eef_link_2.STL  lidar_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  rgb_left_link.STL  (+6 more)
src/moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  mobile_base_arm.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/moveit/launch/: demo.launch  demo_gazebo.launch  gazebo.launch  mobile_base_arm_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
src/moveit/src/: moveit.cpp
src/nav2/: CMakeLists.txt  package.xml
src/nav2/launch/: nav2.launch.py  robot_localization_launch.py
src/nav2/param/: ekf.yaml  mobile_base_arm.yaml
src/nav2/rviz/: nav2.rviz
src/navigation/: CMakeLists.txt  package.xml
src/realsense-files/: CMakeLists.txt  imu_optical_to_ros.cpp  rs_camera.launch
src/rtabmap-files/: CMakeLists.txt  rgbd_vo.launch
(+44 files in other folders)
